2006-10-04 [wwp]	2.5.3cvs4

	* src/prefs_folder_item.c
		Fine-tune layouts in folder item prefs. Suggested by
		Fabien Vantard <fzzzzz@gmail.com>.

2006-10-04 [wwp]	2.5.3cvs3

	* src/prefs_folder_item.c
		Kill the clandestine passengers. You didn't see anything.

2006-10-04 [wwp]	2.5.3cvs2

	* src/prefs_folder_item.c
		Add a way to test the subject simplify regexp in
		folder prefs. Patch by Fabien Vantard <fzzzzz@gmail.com>,
		w/ few layout changes.

2006-20-04 [paul]	2.5.3cvs1

	* NEWS
	* README
	* configure.ac
		Update version number following
		stable release

2006-10-04 [colin]	2.5.2cvs42

	* src/folder.c
	* src/folder.h
	* src/summaryview.c
		Provide a way for folder classes to set their sort
		type and key

2006-10-03 [colin]	2.5.2cvs41

	* src/mh.c
		Don't use strlen() to know if the
		string's empty

2006-10-03 [colin]	2.5.2cvs40

	* src/mh.c
		Fix "check for new folders" with accentued folders

2006-10-03 [ticho]	2.5.2cvs39

	* src/filtering.c
	* src/folder.c
	* src/inc.c
	* src/mbox.c
		Colin's fix for "copy" filtering rules.

2006-10-02 [colin]	2.5.2cvs38

	* src/folderview.c
		Fix for double-click too

2006-10-02 [colin]	2.5.2cvs37

	* src/folderview.c
		correct fix for cvs36

2006-10-02 [colin]	2.5.2cvs36

	* src/folderview.c
		Fix 'goto next unread' after collapsing/expanding 
		a node.

2006-10-02 [colin]	2.5.2cvs35

	* src/summaryview.c
		Fix double freeze/thaw
	* src/common/utils.c
	* src/common/utils.h
		Reimplement strftime
	* src/procheader.c
		Use it


2006-10-02 [colin]	2.5.2cvs34

	* src/mh.c
		Time mh_write_sequences() - it's fast
	* src/summaryview.c
		Init a variable to shut up gcc

2006-10-01 [colin]	2.5.2cvs33

	* src/folder.c
	* src/mh.c
	* src/mh.h
	* src/msgcache.c
		Add helper mh_set_mtime(), and set mtime to stat()'s result
		Add fsync but disable it, it's slow as hell

2006-10-01 [colin]	2.5.2cvs32

	* src/mh.c
	* src/msgcache.c
		fflush() caches and mh_sequences before
		fclose()ing

2006-10-01 [colin]	2.5.2cvs31
